# aligned_layer_tendermint

./: .gitignore  Makefile  README.md  go.mod  go.sum  multi_node_setup.sh  send_sp1_tx.sh  send_verify_tx.sh  server_node_setup.sh  setup_node.sh  setup_validator.sh  spawner.sh
app/: app.go  app_config.go
docker/scripts/: node.entrypoint.sh  validator.entrypoint.sh
docs/static/: openapi.yml
explorer/: README.md
explorer/chains/mainnet/: alignedlayer.json
explorer/src/layouts/components/: DefaultLayout.vue
faucet/: checker.js  faucet.js  package-lock.json  package.json
faucet/config/: config.js
faucet/views/: index.ejs
monitor/: monitor.py
prover_examples/gnark_plonk/: Makefile
prover_examples/sp1/: .gitignore  Cargo.toml  build.rs
prover_examples/sp1/program/: Cargo.toml
prover_examples/sp1/src/: main.rs
tests/: Makefile
verifiers/sp1/: sp1_test.go
verifiers/sp1/lib/: Cargo.toml
verifiers/sp1/lib/src/: lib.rs
x/verify/keeper/: msg_server_kimchi.go
~/.alignedlayer/config/: app.toml  config.toml
