[workspace]
members = [
  "program"
]

[package]
name = "prover-script"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", tag = "v0.0.2" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", tag = "v0.0.2" }
