[package]
name = "sp1-verifier-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "a81d0894f58b85d5a449dda873ce7a16a0b2d1f1" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "a81d0894f58b85d5a449dda873ce7a16a0b2d1f1"  }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
